@startuml

title __IMPL's Class Diagram__\n

  namespace model.impl {
    class model.impl.Administrator {
        - firstname : String
        - id : int
        - lastname : String
        - login : String
        - mdp : String
        + Administrator()
        + getFirstname()
        + getId()
        + getLastname()
        + getLogin()
        + getMdp()
        + setFirstname()
        + setLastname()
        + setLogin()
        + setMdp()
    }
  }
  

  namespace model.impl {
    class model.impl.Article {
        - brand : String
        - picture : String
        - price : Double
        + Article()
        + getBrand()
        + getCategory()
        + getPicture()
        + getPrice()
        + setBrand()
        + setCategorie()
        + setLibelle()
        + setPicture()
        + setPrice()
        + toString()
    }
  }
  

  namespace model.impl {
    class model.impl.Category {
        - articles : List<Article>
        - categorieParent : Optional<Category>
        - sousCategories : List<Category>
        + Category()
        + Category()
        + Category()
        + Category()
        + addArticle()
        + addChild()
        + addChildren()
        + deleteArticle()
        + getArticles()
        + getChildren()
        + getParent()
        + getSubArticles()
        + setParent()
        + toString()
        + updateArticle()
    }
  }
  

  namespace model.impl {
    abstract class model.impl.ComponentImpl {
        # id : int
        # libelle : String
        + getId()
        + getLibelle()
        # ComponentImpl()
    }
  }
  

  namespace model.impl {
    class model.impl.Shop {
        - address : String
        - admins : List<Administrator>
        - categories : List<Category>
        - contact : String
        - description : String
        - idArticle : int
        + AddCategories()
        + Shop()
        + addAdmin()
        + addAdmins()
        + addArticle()
        + deleteAdmin()
        + deleteAdmins()
        + deleteArticle()
        + getAddress()
        + getAdmins()
        + getArticleById()
        + getArticles()
        + getArticlesByCategory()
        + getArticlesByCategory()
        + getCategory()
        + getCategory()
        + getContact()
        + getDescription()
        + getIdArticle()
        + getMainCategories()
        + getSubCategories()
        + toString()
        + updateAdmin()
        + updateArticle()
    }
  }
  

  model.impl.Article -up-|> model.impl.ComponentImpl
  model.impl.Article  -> model.impl.Category : category
  model.impl.Category .up.|> model.api.IComposite
  model.impl.Category -up-|> model.impl.ComponentImpl
  model.impl.ComponentImpl .up.|> model.api.IComponent
  model.impl.Shop -up-|> model.impl.ComponentImpl


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
